<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.HomeActivity" >

    <LinearLayout
        android:id="@+id/viewContainerLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".3"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:src="@drawable/logo"
            android:scaleType="fitStart"
            android:adjustViewBounds="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewContainerLogo"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5" >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewBergerProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/berger_products"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewBergerProductsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewBergerProducts"
                android:layout_above="@+id/buttonViewAllProducts"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/berger_products_description"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:scrollbars="vertical" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonViewAllProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:text="@string/view_all_products"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:background="@drawable/bordered_button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5" >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewBergerVisualizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/berger_visualizer"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewBergerVisualizerDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewBergerVisualizer"
                android:layout_above="@+id/buttonStartVisualizing"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/berger_visualizer_description"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:scrollbars="vertical" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonStartVisualizing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:text="@string/start_visualizing"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:background="@drawable/bordered_button" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
