<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:id="@+id/viewContainerProductsTray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/viewContainerRightOptions"
        android:layout_toRightOf="@+id/viewContainerLeftOptions"
        android:background="@color/slight_transparent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewProductsTray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:scrollbars="vertical" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/recyclerViewProductsTray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewColorsOfProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/colors_of_product"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:id="@+id/linearLayoutProductColorsTrayContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewContainerColorsTray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/viewContainerRightOptions"
        android:layout_toRightOf="@+id/viewContainerLeftOptions"
        android:background="@color/slight_transparent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewColorsTray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scrollbars="vertical" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/recyclerViewColorsTray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewShadesOfColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/shades_of_color"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:id="@+id/linearLayoutSecondaryColorsTrayContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/viewContainerFragments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/viewContainerRightOptions"
        android:orientation="vertical">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/viewContainerLeftOptions"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonToggleOptions"
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_options" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonSaveOptions"
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_save" />

            </LinearLayout>

        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ScrollView
                android:id="@+id/viewContainerGeneralControls"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/viewContainerSeekBars"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/seek_bars_height"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewHue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small" />

                            <com.e2esp.bergerpaints.livevisualizer.views.VerticalSeekBar
                                android:id="@+id/seekBarHue"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/margin_tiny" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewSat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small" />

                            <com.e2esp.bergerpaints.livevisualizer.views.VerticalSeekBar
                                android:id="@+id/seekBarSat"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/margin_tiny" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewVal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_small" />

                            <com.e2esp.bergerpaints.livevisualizer.views.VerticalSeekBar
                                android:id="@+id/seekBarVal"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/margin_tiny" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewDilate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dilate"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <SeekBar
                        android:id="@+id/seekBarDilate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:max="3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/structure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <Spinner
                        android:id="@+id/spinnerStructure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:spinnerMode="dropdown" />

                    <TextView
                        android:id="@+id/textViewDilateSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/size"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <SeekBar
                        android:id="@+id/seekBarDilateSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:max="6" />

                    <LinearLayout
                        android:id="@+id/viewContainerModes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:text="@string/mode"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_small" />

                        <Spinner
                            android:id="@+id/spinnerMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_tiny"
                            android:spinnerMode="dropdown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:text="@string/method"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_small" />

                        <Spinner
                            android:id="@+id/spinnerMethod"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_tiny"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <ScrollView
                android:id="@+id/viewContainerCannyControls"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewKernelSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kernel_size"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <SeekBar
                        android:id="@+id/seekBarKernelSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:max="9" />

                    <TextView
                        android:id="@+id/textViewThreshold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/threshold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <SeekBar
                        android:id="@+id/seekBarThreshold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:max="99" />

                    <TextView
                        android:id="@+id/textViewThresholdRatio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/threshold_ratio"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <SeekBar
                        android:id="@+id/seekBarThresholdRatio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:max="99" />

                    <TextView
                        android:id="@+id/textViewSobelSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kernel_size"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <SeekBar
                        android:id="@+id/seekBarSobelSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:max="2" />

                    <CheckBox
                        android:id="@+id/checkBoxL2Gradient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/threshold_ratio" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/viewContainerRightOptions"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewSymphonyColors"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_alignParentTop="true"
            android:src="@drawable/color_box" />

        <ImageView
            android:id="@+id/imageViewTakePicture"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_camera" />

        <ImageView
            android:id="@+id/imageViewProductColors"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_alignParentBottom="true"
            android:src="@drawable/color_box" />

    </RelativeLayout>

</RelativeLayout>